@@ -50,7 +50,8 @@ public class EntityHirschgeist extends EntityLiving implements IMob {
 	}
 
 	public boolean isDaytime() {
-		return !(world.getWorldTime() >= 13000 && world.getWorldTime() <= 23000);
+		long time = world.getWorldTime() % 24000L; // Time can go over values of 24000, so divide and take the remainder
+		return !(time >= 13000L && time <= 23000L);
 	}
 
 	@Override
