@@ -9,3 +9,4 @@
 - Added lammergeier landing to make taming easier
 - Made some hostile mobs spawn in peaceful but are unable to attack
 - Added rotation to trillium (rotate different placement directions like a chest)
+- Fix bug where mobs that check for daytime (hirschgeist, coyote) would not always register daytime/nighttime
